<resources>
    <string name="app_name">Sakay</string>
    <string name="sample_text">Sample text sample text</string>
    <string name="googleMaps_key">AIzaSyD4JymsqJCjdEILxzAv7bhMVrEUYSuWUyQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_traffic_title">Traffic</string>
    <string name="nav_sakays_title">Sakays</string>
    <string name="nav_rideOffers_title">Ride Offers</string>
    <string name="nav_rideRequests_title">Ride Requests</string>
    <string name="nav_account_title">Account</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_helpAndSupport_title">Help and Support</string>
    <string name="nav_aboutSakay_title">About Sakay</string>
    <string name="nav_preferences_title">Preferences</string>
    <string name="nav_reachUs_title">Reach Us</string>
    <string name="location_permission_denied">Permission Denied</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="permission_rationale_location">Permission Rationale Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_ride_offer">New Ride Offer</string>
    <string name="title_activity_add_ride_request">New Ride Request</string>
    <string name="title_activity_ride_request_detail"> </string>
    <string name="wifi_connected">WiFi Connected</string>
    <string name="lost_connection">Lost Connection</string>
    <string name="connection_error">Connection Error</string>
    <string name="xml_error">XML Error</string>
    <string name="page_title">Newest StackOverflow questions tagged \'android\'</string>
    <string name="updated">Last updated:</string>
    <string name="profile_progress_message">Signing in...</string>
    <string name="facebook_app_id">232435477192287</string>
    <string name="developer_key_hash">fTcxZ1j21Csidx2lLwBM6hJReCs=</string>
    <string name="loading">Loading</string>
    <string name="account_title">Account</string>
    <string name="traffic_title">Traffic</string>
    <string name="sakays_title">Sakay</string>
    <string name="ride_requests_title">Ride Request</string>
    <string name="ride_offers_title">Ride Offers</string>
    <string name="no_connection_message">No connection</string>
    <string name="ride_offer_added_message">Ride offer added</string>
    <string name="ride_request_added_message">Ride request added</string>
    <string name="selected_date_message">Selected Date: </string>
    <string name="title_activity_test">TestActivity</string>
    <string name="start_info">From: </string>
    <string name="destination_info">To: </string>
    <string name="date_and_time_info">Date and Time: </string>
    <string name="vehicle_info">Vehicle: </string>
    <string name="date_and_time">Date and Time</string>
    <string name="save_button">SAVE</string>
    <string name="post_text">POST</string>
    <string name="select_location"><i>Select Location</i></string>
    <string name="ambiguous_location_title">Ambiguous Location</string>
    <string name="ambiguous_location_body">The location you have chosen seems to be ambiguous. Consider selecting a place nearby instead.</string>
    <string name="title_activity_ride_offer_detail">RideOfferDetailActivity</string>
    <string name="title_activity_sakay_detail">SakayDetailActivity</string>
    <string name="choose_on_map_text">Choose on Map</string>
    <string-array name="offer_select_pickup_location">
        <item>Choose on Map</item>
    </string-array>
    <string-array name="offer_select_pickup_location_home">
        <item>Choose on Map</item>
        <item>My Home Address</item>
    </string-array>
    <string-array name="offer_select_pickup_location_work">
        <item>Choose on Map</item>
        <item>My Work Address</item>
    </string-array>
    <string-array name="offer_select_pickup_location_all">
        <item>Choose on Map</item>
        <item>My Home Address</item>
        <item>My Work Address</item>
    </string-array>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_view_profile">ViewProfileActivity</string>
    <string-array name="offer_select_rating_score">
        <item>"5  Excellent"</item>
        <item>"4  Great"</item>
        <item>"3  Satisfactory"</item>
        <item>"2  Unsatisfied"</item>
        <item>"1  Poor"</item>
    </string-array>
    <string name="driver_text">"You will be driving for "</string>
    <string name="rider_text">"You will be riding with"</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="notifications_text">Notifications</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_track_location">Track User</string>
    <string name="title_activity_view_map">Directions</string>
    <string name="not_yet_text">"You can track a user an hour before your scheduled sakay."</string>
    <string name="time_passed_text">"Scheduled date and time for \n"
                                    "this ride offer has passed."</string>
    <string name="not_available_text">"This ride offer is no longer available."</string>
    <string name="not_available_request_text">"This ride request is no longer available."</string>
    <string name="string_delete">Delete</string>
    <string name="title_activity_my_ride_offers">My Ride Offers</string>
    <string name="title_activity_my_ride_requests">My Ride Requests</string>
</resources>