<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/drawer_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_traffic"
            android:icon="@drawable/ic_menu_traffic"
            android:title="@string/nav_traffic_title"
            android:checked="true"/>
        <item
            android:id="@+id/nav_sakays"
            android:icon="@drawable/ic_menu_sakays"
            android:title="@string/nav_sakays_title" />
        <item
            android:id="@+id/nav_rideOffers"
            android:icon="@drawable/ic_menu_ride_offers"
            android:title="@string/nav_rideOffers_title" />
        <item
            android:id="@+id/nav_rideRequests"
            android:icon="@drawable/ic_menu_ride_requests"
            android:title="@string/nav_rideRequests_title" />
        <item
            android:title="@string/nav_preferences_title"
            android:id="@+id/drawer_prefs">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_account"
                        android:icon="@drawable/ic_menu_account"
                        android:title="@string/nav_account_title" />
                    <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/ic_gear"
                        android:title="@string/nav_settings_title" />
                </group>
            </menu>
        </item>
        <group android:id="@+id/drawer_bottom"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_helpAndSupport"
                android:title="@string/nav_helpAndSupport_title" />
            <item
                android:id="@+id/nav_aboutSakay"
                android:title="@string/nav_aboutSakay_title" />
        </group>
    </group>
</menu>
