<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/midGray"
            android:text="@string/start_info"/>
        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/request_start_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/midGray"
            android:text="@string/destination_info"/>
        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/request_destination_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/midGray"
            android:text="@string/date_and_time_info"/>
        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/request_dateAndTime_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"/>
    </LinearLayout>

</LinearLayout>